// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article list header 1`] = `
.c0 {
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 20px;
}

.c1 {
  font-family: "TimesModern-Bold";
  font-size: 40px;
  color: #1D1D1B;
  padding-bottom: 20px;
  text-align: center;
}

.c2 {
  border-top-color: #DBDBDB;
  border-top-style: solid;
  border-top-width: 1px;
  margin: 0 auto 25px auto;
  width: 200px;
}

@media (min-width:768px) {
  .c0 {
    padding-left: 0;
    padding-right: 0;
    max-width: 80.8%;
    padding-top: 5px;
    padding-bottom: 35px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 56.2%;
    padding-top: 15px;
    padding-bottom: 40px;
  }
}

@media (min-width:768px) {
  .c1 {
    font-size: 50px;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 290px;
  }
}

<style>
.S1 {
  color: rgba(51,51,51,1.00);
  font-family: TimesDigitalW04;
  font-size: 15px;
  line-height: 26px;
  text-align: center;
}

.S2 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  background-color: rgba(249,249,249,1.00);
  border-bottom-color: rgba(240,240,240,1.00);
  border-bottom-width: 1px;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  min-height: 90px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 40px;
  width: 100%;
}
</style>

<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-gbtiil r-borderBottomColor-rp7rv6 r-borderBottomWidth-qklmqi r-flexDirection-eqz5dr r-minHeight-1aplaab r-paddingHorizontal-utggzx r-paddingTop-1ur9v65 r-width-13qz1uu S2"
>
  <div
    className="c0 responsiveweb__HeadContainerWithDescription-sc-1n59g01-0 c0 css-view-1dbjc4n"
  >
    <h1
      className="c1"
    >
      Test Name
    </h1>
    <div
      className="c2 responsiveweb__ResponsiveDivider-sc-1n59g01-3 c2 css-view-1dbjc4n"
    />
    <div
      className="css-text-901oao r-color-1khnkhu r-fontFamily-1feecvn r-fontSize-a023e6 r-lineHeight-eaezby r-paddingBottom-19yat4t r-textAlign-q4m81j S1"
    >
      Test 
      <i>
        italic 
      </i>
      <b>
        bold
      </b>
       text.
    </div>
  </div>
</div>
`;

exports[`2. an article list header loading 1`] = `
<style>
.S1 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  background-color: rgba(249,249,249,1.00);
  border-bottom-color: rgba(240,240,240,1.00);
  border-bottom-width: 1px;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  min-height: 90px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 40px;
  width: 100%;
}
</style>

<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-gbtiil r-borderBottomColor-rp7rv6 r-borderBottomWidth-qklmqi r-flexDirection-eqz5dr r-minHeight-1aplaab r-paddingHorizontal-utggzx r-paddingTop-1ur9v65 r-width-13qz1uu S1"
/>
`;
